@@ -93,7 +93,7 @@ static MonoMethodSignature *helper_sig_class_init_trampoline = NULL;
 static guint32 default_opt = MONO_OPT_PEEPHOLE;
 
 guint32 mono_jit_tls_id = -1;
-gboolean mono_jit_trace_calls = FALSE;
+MonoTraceSpec *mono_jit_trace_calls = NULL;
 gboolean mono_break_on_exc = FALSE;
 gboolean mono_compile_aot = FALSE;
 
